# rust-imperialism

./: .gitignore  AGENTS.md  ALLOCATION_DESIGN.md  BEVY_PATTERNS.md  CLAUDE.md  Cargo.toml  DIPLOMACY_PLAN.md  LICENSE  OBSERVER_PATTERN.md  OVERVIEW.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  RELATIONSHIP_MIGRATION.md  UI_REACTIVITY.md  clippy.toml  extract_data.py  manual_text.txt
.github/workflows/: ci.yml  copilot-setup-steps.yml
ai-docs/: ALLOCATION_UI_WIDGETS.md  CITY_UI_REDESIGN.md  CIVILIAN_UNITS_DESIGN.md  GENERIC_SYSTEMS.md  OBSERVER_IMPROVEMENTS.md  OVERVIEW.md
assets/: mapping.csv
benches/: ai_benchmark.rs  border_benchmark.rs  game_benchmark.rs  province_benchmark.rs  query_lookup_benchmark.rs  snapshot_benchmark.rs  task_execution_benchmark.rs
cargo/: config.toml
scripts/: bench_regressions.py
src/: assets.rs  bmp_loader.rs  border_rendering.rs  city_rendering.rs  civilians.rs  combat.rs  constants.rs  debug.rs  health.rs  hero.rs  input.rs  lib.rs  main.rs  monster.rs  movement.rs  pathfinding.rs  province.rs  province_gen.rs  province_setup.rs  rendering.rs  resources.rs  save.rs  terrain_atlas.rs  terrain_gen.rs  test_utils.rs  tile_pos.rs  tiles.rs  transport_rendering.rs  turn_system.rs  ui.rs
src/ai/: behavior.rs  context.rs  execute.rs  markers.rs  mod.rs  planner.rs  snapshot.rs  trade.rs
src/civilians/: commands.rs  engineering.rs  hiring.rs  jobs.rs  mod.rs  order_validation.rs  player_ownership_test.rs  rendering.rs  stacking_test.rs  systems.rs  tests.rs  types.rs  ui_components.rs  ui_ownership_test.rs
src/combat/: tests.rs
src/diplomacy/: mod.rs  tests.rs
src/economy/: allocation.rs  allocation_systems.rs  allocation_systems_tests.rs  allocation_systems_v2.rs  allocation_tests.rs  buildings.rs  calendar.rs  goods.rs  market.rs  mod.rs  nation.rs  production.rs  reservation.rs  stockpile.rs  technology.rs  trade.rs  trade_capacity.rs  transport.rs  treasury.rs  workforce.rs
src/health/: tests.rs
src/helpers/: camera.rs  mod.rs  picking.rs
src/map/: mod.rs  prospecting.rs  province.rs  province_gen.rs  province_setup.rs  terrain_gen.rs  tile_pos.rs  tiles.rs
src/messages/: civilians.rs  diplomacy.rs  economy.rs  mod.rs  transport.rs  workforce.rs
src/movement/: tests.rs
src/orders/: mod.rs
src/pathfinding/: tests.rs
src/plugins/: mod.rs
src/ships/: construction.rs  mod.rs  types.rs
src/turn_system/: tests.rs
src/ui/: button_style.rs  city.rs  components.rs  diplomacy.rs  generic_systems.rs  (+12 more)
tests/: README.md  ai_civilian_commands.rs  ai_comprehensive.rs  ai_map_pruning_collection.rs  ai_resource_flow.rs  ai_value_added_trade.rs  core_mechanics.rs  fixture_loading_test.rs  integration_tests.rs  map_pruning_test.rs  performance_border.rs  screenshot_acceptance_test.rs  transport_allocation_test.rs
(+56 files in other folders)
