[package]
name = "rust-imperialism"
version = "0.1.0"
edition = "2024"
default-run = "main"

# The main CLI executable
[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
bevy = { version = "0.17", features = ["bevy_dev_tools", "bevy_mesh_picking_backend", "bevy_sprite_picking_backend", "experimental_bevy_ui_widgets"] }
hexx = { version = "0.22", features = ["algorithms", "serde", "bevy"] }
bevy_ecs_tilemap = "0.17"
rand = "0.9.0"
noise = "0.9"
bevy-inspector-egui = "0.35.0"
image = "0.25"
thiserror = "2.0"
moonshine-save = "0.6"
moonshine-kind = "0.4"
big-brain = { git = "https://github.com/zkat/big-brain", rev = "12ffd46498f4703dd80b0121c9b964b413f887ee", default-features = false }
