[package]
name = "rust-imperialism"
version = "0.1.0"
edition = "2024"
default-run = "main"

# The main CLI executable
[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "generate_test_map"
path = "src/bin/generate_test_map.rs"

[[bench]]
name = "ai_benchmark"
harness = false

[[bench]]
name = "game_benchmark"
harness = false

[[bench]]
name = "snapshot_benchmark"
harness = false

[[bench]]
name = "query_lookup_benchmark"
harness = false
[[bench]]
name = "province_benchmark"
harness = false

[dependencies]
bevy = { version = "0.18", features = ["bevy_dev_tools", "dynamic_linking", "experimental_bevy_ui_widgets"] }
hexx = { version = "0.24", features = ["algorithms", "serde", "bevy"] }
bevy_ecs_tilemap = "0.18"
rand = "0.9.0"
noise = "0.9"
bevy-inspector-egui = { version = "0.36.0", optional = true }
image = "0.25"
thiserror = "2.0"
moonshine-save = { git = "https://github.com/agluszak/moonshine_save.git" }
moonshine-kind = { git = "https://github.com/agluszak/moonshine_kind.git" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.8.1"

[features]
default = ["debug"]
debug = ["dep:bevy-inspector-egui"]

[profile.release]
debug = true

[[bench]]
name = "task_execution_benchmark"
harness = false
